[project]
name = "pgzero-mjd"
description = "A custom Pygame Zero build for class use"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pygame>=2.6.1",
    "numpy",
    "pyfxr",
]
version = "0.0.1"

[project.urls]
Documentation = "https://pygame-zero.readthedocs.io/"
Source = "https://github.com/mjdargen/pgzero"

[project.scripts]
pgzrun = "pgzero.runner:main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pgzero/_version.py"

[tool.ruff]
builtins = [
    "Actor", "Rect", "ZRect", "animate", "clock", "exit", "images", "keyboard", "keymods",
    "keys", "mouse", "music", "screen", "sounds", "storage", "tone"
]